feat: 更新 Docker 构建流程，调整单平台构建和多平台推送的步骤；优化游戏规则说明，明确轮回进行中机缘次数的修改限制

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,19 +62,19 @@ jobs:
           type=raw,value=${{ github.event.inputs.tag || 'latest' }},enable={{is_default_branch}}
           type=sha,prefix=sha-
 
-    - name: Build Docker image
+    - name: Build and test Docker image (single platform)
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: false
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        outputs: type=docker,dest=/tmp/image.tar
+        load: true
 
-    - name: Push Docker image
+    - name: Build and push multi-platform image
       if: |
         github.event_name != 'pull_request' && 
         (github.event.inputs.push_to_registry == 'true' || github.event.inputs.push_to_registry == '' || github.event_name == 'push')
@@ -87,3 +87,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
